2005-08-11  Carl Worth  <cworth@cworth.org>

	* src/cairo-font.c (_cairo_toy_font_face_fini): Fix inverted sense
	of assert statement which led to lots of unpleasant crashes.

2005-08-08  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Add hash_entry field to cairo_font_face_t so
	that it can (optionally) be hashed.

	* src/cairo-font.c: (_cairo_toy_font_face_hash_table_lock),
	(_cairo_toy_font_face_hash_table_unlock),
	(_cairo_toy_font_face_init_key), (_cairo_toy_font_face_init),
	(_cairo_toy_font_face_fini), (_cairo_toy_font_face_keys_equal),
	(_cairo_toy_font_face_create), (_cairo_toy_font_face_destroy),
	(_cairo_toy_font_face_scaled_font_create),
	(_cairo_font_reset_static_data): Complete the remainder of the
	simple -> toy renaming. Convert the family/slant/weight ->
	cairo_toy_font_face_t mapping to use cairo-hash.c rather
	than cairo-cache.c.

2005-08-11  Carl Worth  <cworth@cworth.org>

	* src/cairo-ft-font.c: (_cairo_ft_unscaled_font_init),
	(_cairo_ft_unscaled_font_init_key),
	(_cairo_ft_unscaled_font_keys_equal),
	(_cairo_ft_unscaled_font_fini),
	(_cairo_ft_unscaled_font_map_destroy),
	(_cairo_ft_unscaled_font_map_lock),
	(_cairo_ft_unscaled_font_map_unlock),
	(_cairo_ft_unscaled_font_map_create),
	(_cairo_ft_unscaled_font_create_for_pattern), (_has_unlocked_face),
	(_cairo_ft_unscaled_font_lock_face),
	(_cairo_ft_unscaled_font_destroy),
	(_cairo_ft_scaled_font_create_toy),
	(cairo_ft_font_face_create_for_pattern),
	(_cairo_ft_font_reset_static_data): 
	Move implementation of filename/id => cairo_ft_unscaled_font_t
	from cairo-cache.c to cairo-hash.c, with new
	cairo_ft_unscaled_font_map.
	
	* src/cairoint.h: Add cairo_unscaled_font->hash_entry so that
	unscaled fonts can live in hash tables.

2005-08-08  Carl Worth  <cworth@cworth.org>

	Reviewed by: otaylor

	* src/cairoint.h: Re-order cairo_scaled_font->font_face parameter
	to maintain the font_face,font_matrix,ctm,options order that